compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__utf16_codepoint_little_endian.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2545
expression: "\npub fn go(codepoint) {\n  <<codepoint:utf16_codepoint-little>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(codepoint) {
  <<codepoint:utf16_codepoint-little>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, codepointToUtf16 } from "../gleam.mjs";

export function go(codepoint) {
  return toBitArray([codepointToUtf16(codepoint, false)]);
}
