compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__utf16_little_endian.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2193
expression: "\npub fn main() {\n  <<\"Hello, world!\":utf16-little>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<"Hello, world!":utf16-little>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, stringToUtf16 } from "../gleam.mjs";

export function main() {
  return toBitArray([stringToUtf16("Hello, world!", false)]);
}
