compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__utf32.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2128
expression: "\npub fn main() {\n  <<\"Hello, world!\":utf32>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<"Hello, world!":utf32>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, stringToUtf32 } from "../gleam.mjs";

export function main() {
  return toBitArray([stringToUtf32("Hello, world!", true)]);
}
