compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__utf32_codepoint.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2139
expression: "\nfn codepoint() -> UtfCodepoint { todo }\n\npub fn main() {\n  let my_codepoint = codepoint()\n  <<my_codepoint:utf32_codepoint>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn codepoint() -> UtfCodepoint { todo }

pub fn main() {
  let my_codepoint = codepoint()
  <<my_codepoint:utf32_codepoint>>
}


----- COMPILED JAVASCRIPT
import { makeError, toBitArray, codepointToUtf32 } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

function codepoint() {
  throw makeError(
    "todo",
    FILEPATH,
    "my/mod",
    2,
    "codepoint",
    "`todo` expression evaluated. This code has not yet been implemented.",
    {}
  )
}

export function main() {
  let my_codepoint = codepoint();
  return toBitArray([codepointToUtf32(my_codepoint, true)]);
}
