compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__utf8_codepoint.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 325
expression: "\npub fn go(x) {\n  <<x:utf8_codepoint, \"Gleam\":utf8>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  <<x:utf8_codepoint, "Gleam":utf8>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, stringBits, codepointBits } from "../gleam.mjs";

export function go(x) {
  return toBitArray([codepointBits(x), stringBits("Gleam")]);
}
