compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__utf8_codepoint_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 336
expression: "\npub fn go(x) {\n  <<x:utf8_codepoint, \"Gleam\":utf8>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  <<x:utf8_codepoint, "Gleam":utf8>>
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export function go(x: _.UtfCodepoint): _.BitArray;
