compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__variable_sized.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 242
expression: "\npub fn go(x, y) {\n  <<x:size(y)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x, y) {
  <<x:size(y)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

export function go(x, y) {
  return toBitArray([sizedInt(x, y, true)]);
}
